# ChangeLog for dev-lib/libg2c
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Jan 2009; justin Lecher (jlec) <jlec@j-schmitz.net> +metadata.xml,
  +libg2c-3.4.6.ebuild:
  Setup dev-lib/libg2c
