@@ -1,22 +1,25 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-# inherit
+inherit multilib
 
 DESCRIPTION="Library needed for GNU Fortran 77 applications linked against the shared library."
-HOMEPAGE="http://packages.debian.org/etch/libg2c0"
-SRC_URI="http://ftp.de.debian.org/debian/pool/main/g/gcc-3.4/libg2c0_3.4.6-9_i386.deb"
+HOMEPAGE="http://packages.debian/pool/main/g.org/lenny/libg2c0"
+SRC_URI="
+	x86? ( mirror://debian/pool/main/g/gcc-3.4/libg2c0_3.4.6-9_i386.deb )
+	amd64? ( mirror://debian/pool/main/g/gcc-3.4/libg2c0_3.4.6-9_amd64.deb )"
 
-LICENSE=""
-
+LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="-* ~x86"
-
 IUSE=""
+
 RDEPEND=""
 DEPEND="${RDEPEND}
 	app-arch/dpkg"
+
+S="${WORKDIR}"
 
 src_unpack() {
 	unpack ${A}
@@ -25,8 +28,5 @@ src_unpack() {
 }
 
 src_install() {
-	insinto /usr/lib/
-	doins usr/lib/*
-
-	dosym libg2c.so.0 /usr/lib/libg2c.so
+	dolib.so usr/lib*/* || die
 }
