@@ -1,6 +1,9 @@
-# ChangeLog for dev-lib/libg2c
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# ChangeLog for dev-libs/libg2c
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  31 Mar 2011; Justin Lecher <jlec@gentoo.org> libg2c-3.4.6.ebuild:
+  Fixed up ebuild
 
   27 Jan 2009; justin Lecher (jlec) <jlec@j-schmitz.net> +metadata.xml,
   +libg2c-3.4.6.ebuild:
